# tformance

./: .dockerignore  .env.example  .env.unraid.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.web  LICENSE.md  Makefile  Procfile  README.md  RENDER_DEPLOY.md  agents.md  build.sh  build_celery.sh  commit-draft.txt  conftest.py  docker-compose.unraid.yml  docker-compose.yml  docker_startup.sh  heroku.yml  manage.py  package-lock.json  package.json  pegasus-config.yaml  playwright.config.ts  pyproject.toml  render.yaml  security-fixes-context.md  security-fixes-plan.md  security-fixes-tasks.md  tailwind.config.js  tsconfig.json  ui-review-context.md  vite.config.ts
.claude/: GUIDE.md  settings.json
.claude/agents/: code-architecture-reviewer.md  documentation-architect.md  plan-reviewer.md  refactor-planner.md  tdd-implementer.md  tdd-orchestrator.md  tdd-refactorer.md  tdd-test-writer.md
.claude/commands/: dev-docs-update.md  dev-docs.md
.claude/hooks/: package-lock.json  post-tool-use-tracker.sh  skill-activation-prompt.ts  stop-validation.sh
.claude/skills/: skill-rules.json
.github/: dependabot.yml
.github/workflows/: build_frontend.yml  claude.yml  deploy-report.yml  docker-build.yml  tests.yml
api-client/: runtime.ts
api-client/.openapi-generator/: FILES
api-client/apis/: PegasusApi.ts  TeamsApi.ts
api-client/models/: AggregateEmployeeData.ts  DepartmentEnum.ts  Employee.ts  Invitation.ts  Membership.ts  OpenInvitation.ts  PaginatedEmployeeList.ts  PaginatedInvitationList.ts  PaginatedTeamList.ts  PatchedEmployee.ts  PatchedInvitation.ts  PatchedTeam.ts  Price.ts  RoleEnum.ts  StatusEnum.ts  Subscription.ts  SubscriptionItem.ts  Team.ts  UserInvitationsResponse.ts  index.ts
apps/api/: permissions.py
apps/auth/: apps.py  oauth_state.py  urls.py  views.py
apps/content/: blocks.py
apps/dashboard/: services.py  urls.py  views.py
apps/feedback/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
apps/insights/: urls.py  views.py
apps/integrations/: admin.py  apps.py  constants.py  exceptions.py  factories.py  models.py  onboarding_pipeline.py  pipeline_signals.py  receivers.py  signals.py  tasks.py  types.py  urls.py  views.py
apps/metrics/: admin.py  apps.py  factories.py  models.py  processors.py  tasks.py  types.py  urls.py  view_utils.py  views.py
apps/notes/: factories.py  forms.py  models.py  urls.py  views.py
apps/onboarding/: apps.py  urls.py  views.py
apps/public/: admin.py  aggregations.py  apps.py  cloudflare.py  constants.py  context_processors.py  decorators.py  formatting.py  forms.py  middleware.py  models.py  public_sync.py  repo_insight_service.py  repo_snapshot_service.py  sitemaps.py  tasks.py  urls.py
apps/pullrequests/: __init__.py  urls.py
apps/subscriptions/: decorators.py  feature_gating.py  helpers.py  metadata.py  models.py  tasks.py  webhooks.py  wrappers.py
apps/teams/: adapter.py  admin.py  context.py  context_processors.py  forms.py  helpers.py  invitations.py  middleware.py  mixins.py  models.py  serializers.py  signals.py  urls.py
apps/teams_example/: models.py  tests.py  views.py
apps/users/: adapter.py  admin.py  forms.py  models.py  signals.py  urls.py  views.py
apps/utils/: analytics.py  billing.py  date_utils.py  errors.py  fields.py  middleware.py  sanitization.py  slug.py  sync_logger.py
apps/web/: compare_data.py  context_processors.py  decorators.py  meta.py  sitemaps.py  urls.py  views.py
assets/javascript/: alpine.js  analytics.js  app.js  htmx.js  mock-i18n.js  site.js  theme.js
assets/styles/: site-tailwind.css
dev/: DATABASE-SCALING.md  DEV-ENVIRONMENT.md  README.md  SESSION-HANDOFF.md  STAGING-DEPLOYMENT-PLAN.md  visual-improvement-plan.md
dev/active/: AI-IMPACT-REPORT-2025.html  AI-INSIGHTS-REPORT-2025.md  HANDOFF-NOTES.md  SESSION-HANDOFF-2025-12-21.md  report-critical-review.md  sync-bug-handoff.md  test-suite-qa-review.md
dev/archive/: alpha-qa-resolved.md
dev/completed/: screencast-script.md  visual-parallel-prompts.md
dev/guides/: AUTHENTICATION-FLOWS.md  CODE-GUIDELINES.md  COMMANDS-REFERENCE.md  COPILOT-DEVELOPMENT.md  DESIGN-SYSTEM.md  EXTERNAL-INTEGRATIONS.md  FRONTEND-PATTERNS.md  HEROKU-DEPLOYMENT.md  OG-IMAGE-GUIDE.md  POSTHOG-ANALYTICS.md  REAL-WORLD-TESTING.md  TESTING-GUIDE.md  UNRAID-DEPLOYMENT.md
docs/: index.html  report_data_for_llms.md
docs/data/: ai_categories.csv  ai_tools_monthly.csv  ai_tools_with_categories.csv  category_metrics.csv  monthly_trends.csv  overall_stats.txt  public_catalog_curated_v1.csv  public_catalog_seed_100.csv  team_summary.csv  within_team_comparison.csv
docs/plans/: 2026-01-28-jira-integration-enhancement.md  2026-02-15-public-app-reuse-design.md  2026-02-15-public-app-reuse-poc-plan.md  2026-02-15-public-oss-analytics.md  2026-03-14-local-public-repo-incremental-reuse-plan.md  2026-03-14-public-repo-pages-gtm-implementation-plan.md  2026-03-22-epistemic-layer2-design.md  2026-03-22-handoff-report.md  2026-03-22-public-pages-catalog-seo-unraid-plan.md  2026-03-22-public-proof-surfaces-external-implementation-plan.md  2026-03-22-strategy-realignment-stop-building-start-talking.md  (+11 more)
prd/: AI-DETECTION-TESTING.md  ARCHITECTURE.md  COMPETITOR-RESEARCH.md  DASHBOARDS.md  DATA-MODEL.md  GITHUB-APP-MIGRATION.md  IMPLEMENTATION-PLAN.md  JIRA-ENRICHMENT.md  NAVIGATION-RESEARCH.md  ONBOARDING.md  PERSONAL-NOTES.md  PRD-MVP.md  PRICING-STRATEGY.md  PROMPT-ENGINEERING.md  README.md  SLACK-BOT.md  dna_codex.md  gtm_go_to_market_codex.md  icp_target_audience_codex.md
public_report/: index.html  report_data_for_llms.md
results/: insight-promptfoo-results.json  insight-promptfoo-v2-results.json  insight-promptfoo-v3-results.json
scripts/: dev.sh  healthcheck.sh  lint_colors.py  lint_team_isolation.py  seed_all_oss.sh  seed_all_oss_part2.sh  seed_with_progress.py
templates/: 400.html  403.html  404.html  429.html  500.html  error_base.html  llms.txt  robots.txt
tests/: test_fixtures.py
tformance/: asgi.py  celery.py  settings.py  settings_production.py  urls.py  wsgi.py
(+1907 files in other folders)
