[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
    ".direnv",
    ".git",
    ".ruff_cache",
    "node_modules",
    "migrations",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
fixable = [
    "ALL",
]
unfixable = []
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.setuptools]
py-modules = []

[project]
name = "tformance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.9",
    "boto3",
    "celery",
    "celery-progress",
    "celery[redis]",
    "channels",
    "channels_redis",
    "dj-stripe>=2.9,<2.11",
    "django-allauth[socialaccount,mfa]>=65.13.0",
    "django-anymail[mailgun]", # email services
    "django-browser-reload",
    "django-celery-beat",
    "django-environ",
    "django-health-check",
    "django-hijack",
    "django-htmx",
    "django-ratelimit>=4.1.0",
    "django-storages",
    "django-template-partials",
    "django-vite>=3.1.0",
    "django-waffle",
    "djangorestframework",
    "djangorestframework-api-key",
    "drf-spectacular",
    "factory-boy>=3.3.3",
    "jira>=3.10.5",
    "psycopg2-binary",
    "pygithub>=2.8.1",
    "python-dateutil",
    "redis",
    "sentry-sdk[django]>=2.33.2",
    "slack-sdk>=3.39.0",
    "stripe<15.0",
    "wagtail",
    "whitenoise[brotli]",
    "urllib3>=2.6.0",
    "bleach>=6.3.0",
]

[dependency-groups]
dev = [
    "channels[daphne]",
    "pre-commit",
    "ruff>=0.13.1",
    "pegasus-cli>=0.8",
]
prod = [
    "gunicorn",
    "uvicorn[standard]",
]
